[gd_scene load_steps=28 format=3 uid="uid://bwn5o8bf43uqr"]

[ext_resource type="Script" uid="uid://cv4rym5ix4sxf" path="res://scripts/mario.gd" id="1_bvgp0"]
[ext_resource type="Texture2D" uid="uid://belgnktgel8wy" path="res://assets/textures/mario-ssheet-1.png" id="1_keuod"]
[ext_resource type="AudioStream" uid="uid://ru13qcq25886" path="res://assets/audio/jumpbros.ogg" id="3_5gbmu"]
[ext_resource type="Texture2D" uid="uid://e3v7lmf1ii0a" path="res://assets/textures/particula-humo.png" id="3_l5geh"]
[ext_resource type="Texture2D" uid="uid://uclvkd52k178" path="res://assets/textures/mario-img-0.png" id="4_bdh24"]
[ext_resource type="AudioStream" uid="uid://n77770apufpa" path="res://assets/audio/p-ping.mp3" id="4_wnd63"]
[ext_resource type="AudioStream" uid="uid://d2d7cufijchkg" path="res://assets/audio/mario-lose-life.mp3" id="5_rgcl4"]
[ext_resource type="AudioStream" uid="uid://dytp06wwcu0de" path="res://assets/audio/squit.mp3" id="6_cjj4f"]
[ext_resource type="AudioStream" uid="uid://b77fm1hrqtk2r" path="res://assets/audio/level-up.mp3" id="7_8ska5"]
[ext_resource type="AudioStream" uid="uid://qfottwqvu1oq" path="res://assets/audio/estrella.mp3" id="8_5l4gq"]
[ext_resource type="AudioStream" uid="uid://jwityfng1of2" path="res://assets/audio/bonus-level-up.mp3" id="9_t0xp7"]
[ext_resource type="AudioStream" uid="uid://cacgho7h1erd2" path="res://assets/audio/musica-mario-bros.mp3" id="10_q20sn"]
[ext_resource type="AudioStream" uid="uid://ddb1c2wkthd2g" path="res://assets/audio/impacto.mp3" id="12_pruu4"]
[ext_resource type="AudioStream" uid="uid://ddw8hk2tgefas" path="res://assets/audio/mario-tuberias.mp3" id="14_440ab"]
[ext_resource type="AudioStream" uid="uid://bpdan62oaoexr" path="res://assets/audio/gameover_mario.mp3" id="15_l0oii"]
[ext_resource type="AudioStream" uid="uid://xkpa08rqtsi" path="res://assets/audio/entrar-tuberia.mp3" id="16_lt8tb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cjj4f"]
atlas = ExtResource("1_keuod")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ska5"]
atlas = ExtResource("1_keuod")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_keuod"]
atlas = ExtResource("1_keuod")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgcl4"]
atlas = ExtResource("1_keuod")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdh24"]
atlas = ExtResource("1_keuod")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bvgp0"]
atlas = ExtResource("1_keuod")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gbmu"]
atlas = ExtResource("1_keuod")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnd63"]
atlas = ExtResource("1_keuod")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_p0nfy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjj4f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ska5")
}],
"loop": true,
"name": &"FlagPole",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_keuod")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgcl4")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdh24")
}],
"loop": true,
"name": &"LoseLife",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvgp0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gbmu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnd63")
}],
"loop": true,
"name": &"Walk",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p0nfy"]
size = Vector2(12, 16)

[sub_resource type="Curve" id="Curve_bdh24"]
_data = [Vector2(0, 0.977528), 0.0, 0.0, 0, 0, Vector2(0.982955, 0.101124), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Mario" type="CharacterBody2D"]
z_index = 15
collision_layer = 4
collision_mask = 4209
script = ExtResource("1_bvgp0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_p0nfy")
animation = &"Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_p0nfy")

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
limit_right = 3380
limit_bottom = 0

[node name="Camera2D2" type="Camera2D" parent="."]
offset = Vector2(0, -240)
limit_left = 0
limit_top = 0
limit_right = 427
limit_bottom = 0

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
scale = Vector2(0.7, 0.7)
emitting = false
amount = 20
texture = ExtResource("3_l5geh")
lifetime = 0.5
one_shot = true
explosiveness = 1.0
randomness = 0.36
lifetime_randomness = 1.0
fixed_fps = 30
spread = 180.0
gravity = Vector2(0, 100)
initial_velocity_min = 20.0
initial_velocity_max = 50.0
scale_amount_min = 0.07
scale_amount_max = 0.4
scale_amount_curve = SubResource("Curve_bdh24")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="TimerColision" type="Timer" parent="."]
one_shot = true

[node name="TimerTransicionVidaMenos" type="Timer" parent="."]
one_shot = true

[node name="TimerEntrarTuberia" type="Timer" parent="."]
one_shot = true

[node name="TimerEstrella" type="Timer" parent="."]
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.0
offset_top = -20.0
offset_right = 53.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_bdh24")

[node name="Label" type="Label" parent="CanvasLayer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "x 4"

[node name="PanelTimeup" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.5
offset_top = -20.5
offset_right = 62.5
offset_bottom = 20.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PanelTimeup"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="CanvasLayer/PanelTimeup/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.933333, 0.145098, 0.105882, 1)
theme_override_font_sizes/font_size = 18
text = "Time up"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SonidoSalto" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_5gbmu")

[node name="SonidoCoin" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_wnd63")

[node name="SonidoLoseLife" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_rgcl4")
max_distance = 9900.0

[node name="SonidoAplastar" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_cjj4f")

[node name="MusicaLevelUp" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_8ska5")

[node name="MusicaEstrella" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_5l4gq")

[node name="SonidoBonusLevelUp" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_t0xp7")

[node name="SonidoImpacto" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_pruu4")

[node name="MusicaFondo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_q20sn")

[node name="MusicaFondoUnderground" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_440ab")

[node name="MusicaGameover" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_l0oii")
max_distance = 49000.0
attenuation = 0.0625002

[node name="SonidoEntrarTuberia" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_lt8tb")

[connection signal="timeout" from="TimerEntrarTuberia" to="." method="_on_timer_entrar_tuberia_timeout"]
